Document Swift SSL options (#93)
* Document Swift SSL options
* Support insecure_skip_verify
