# _proto/swift/v2/tiller.swagger.json
@@ -562,17 +562,17 @@
           "description": "Chart is the protobuf representation of a chart."
         },
         "chart_url": {
-          "title": "url to download char tar file @appscode",
+          "title": "URL to download chart archive",
           "type": "string"
         },
         "client_certificate": {
           "format": "byte",
-          "title": "ClientCertificate contains PEM-encoded data from a client cert file for TLS.\n+optional",
+          "title": "ClientCertificate contains PEM-encoded data passed as a client cert to chart repository.\n+optional",
           "type": "string"
         },
         "client_key": {
           "format": "byte",
-          "title": "ClientKey contains PEM-encoded data from a client key file for TLS.\n+optional",
+          "title": "ClientKey contains PEM-encoded data passed as a client key to chart repository.\n+optional",
           "type": "string"
         },
         "disable_hooks": {
@@ -585,6 +585,11 @@
           "format": "boolean",
           "type": "boolean"
         },
+        "insecure_skip_verify": {
+          "format": "boolean",
+          "title": "Skip certificate verification for chart repository.\n+optional",
+          "type": "boolean"
+        },
         "name": {
           "description": "Name is the candidate release name. This must be unique to the\nnamespace, otherwise the server will return an error. If it is not\nsupplied, the server will autogenerate one.",
           "type": "string"
@@ -594,7 +599,7 @@
           "type": "string"
         },
         "password": {
-          "title": "Password is the password for basic authentication to the kubernetes cluster.\n+optional",
+          "title": "Password is the password for basic authentication to the chart repository.\n+optional",
           "type": "string"
         },
         "reuse_name": {
@@ -608,11 +613,11 @@
           "type": "integer"
         },
         "token": {
-          "title": "Token is the bearer token for authentication to the kubernetes cluster.\n+optional",
+          "title": "Token is the bearer token for authentication to the chart repository.\n+optional",
           "type": "string"
         },
         "username": {
-          "title": "Username is the username for basic authentication to the kubernetes cluster.\n+optional",
+          "title": "Username is the username for basic authentication to the chart repository.\n+optional",
           "type": "string"
         },
         "values": {
@@ -827,17 +832,17 @@
           "description": "Chart is the protobuf representation of a chart."
         },
         "chart_url": {
-          "title": "url to download char tar file @appscode",
+          "title": "URL to download chart archive",
           "type": "string"
         },
         "client_certificate": {
           "format": "byte",
-          "title": "ClientCertificate contains PEM-encoded data from a client cert file for TLS.\n+optional",
+          "title": "ClientCertificate contains PEM-encoded data passed as a client cert to chart repository.\n+optional",
           "type": "string"
         },
         "client_key": {
           "format": "byte",
-          "title": "ClientKey contains PEM-encoded data from a client key file for TLS.\n+optional",
+          "title": "ClientKey contains PEM-encoded data passed as a client key to chart repository.\n+optional",
           "type": "string"
         },
         "disable_hooks": {
@@ -855,12 +860,17 @@
           "format": "boolean",
           "type": "boolean"
         },
+        "insecure_skip_verify": {
+          "format": "boolean",
+          "title": "Skip certificate verification for chart repository.\n+optional",
+          "type": "boolean"
+        },
         "name": {
           "title": "The name of the release",
           "type": "string"
         },
         "password": {
-          "title": "Password is the password for basic authentication to the kubernetes cluster.\n+optional",
+          "title": "Password is the password for basic authentication to the chart repository.\n+optional",
           "type": "string"
         },
         "recreate": {
@@ -884,11 +894,11 @@
           "type": "integer"
         },
         "token": {
-          "title": "Token is the bearer token for authentication to the kubernetes cluster.\n+optional",
+          "title": "Token is the bearer token for authentication to the chart repository.\n+optional",
           "type": "string"
         },
         "username": {
-          "title": "Username is the username for basic authentication to the kubernetes cluster.\n+optional",
+          "title": "Username is the username for basic authentication to the chart repository.\n+optional",
           "type": "string"
         },
         "values": {
