# pkg/server/cmd/options/options.go
@@ -8,7 +8,6 @@ type Options struct {
 	SecureAddr               string
 	PlaintextAddr            string
 	APIDomain                string
-	TillerCACertFile         string
 	CACertFile               string
 	CertFile                 string
 	KeyFile                  string
@@ -17,9 +16,13 @@ type Options struct {
 	CORSOriginAllowSubdomain bool
 	OpsAddr                  string
 
-	Connector      string // incluster, direct, kubeconfig, appscode
-	TillerEndpoint string
-	KubeContext    string
+	Connector            string // incluster, direct, kubeconfig, appscode
+	TillerEndpoint       string
+	TillerCACertFile     string
+	TillerClientCertFile string
+	TillerClientKeyFile  string
+	InsecureSkipVerify   bool
+	KubeContext          string
 }
 
 func New() *Options {
@@ -48,5 +51,8 @@ func (opt *Options) AddFlags(fs *pflag.FlagSet) {
 	fs.StringVar(&opt.Connector, "connector", opt.Connector, "Name of connector used to connect to Tiller server. Valid values are: incluster, direct, kubeconfig, appscode")
 	fs.StringVar(&opt.TillerEndpoint, "tiller-endpoint", opt.TillerEndpoint, "Endpoint of Tiller server, eg, [scheme://]host:port")
 	fs.StringVar(&opt.TillerCACertFile, "tiller-cacert-file", opt.TillerCACertFile, "File containing CA certificate for Tiller server")
+	fs.StringVar(&opt.TillerClientCertFile, "tiller-client-cert-file", opt.TillerClientCertFile, "File container client TLS certificate for Tiller server")
+	fs.StringVar(&opt.TillerClientKeyFile, "tiller-client-key-file", opt.TillerClientKeyFile, "File containing client TLS private key for Tiller server")
+	fs.BoolVar(&opt.InsecureSkipVerify, "tiller-insecure-skip-verify", opt.InsecureSkipVerify, "Skip certificate verification for Tiller server")
 	fs.StringVar(&opt.KubeContext, "kube-context", opt.KubeContext, "Kube context used by 'kubeconfig' connection")
 }
